# epitech_projects

./: README.md
hub/leapmotion_car_controller/: CMakeLists.txt
hub/leapmotion_car_controller/lib/: control.cpp  decode.cpp  image.cpp  realtime.cpp
hub/leapmotion_car_controller/src/: Drone.cpp  Drone.hpp  LeapMotion.cpp  LeapMotion.hpp  MyListener.cpp  MyListener.hpp  Sfml.cpp  Sfml.hpp  main.cpp
tek2/OOP/OOP_indie_studio_2018/: .gitignore  CMakeLists.txt  README.md  setup_application.sh
tek2/OOP/OOP_indie_studio_2018/assets/: icon.rc
tek2/OOP/OOP_indie_studio_2018/assets/fonts/: wozcott_30.xml
tek2/OOP/OOP_indie_studio_2018/assets/models/: lamasticot.ms3d
tek2/OOP/OOP_indie_studio_2018/cmake/: FindIrrlicht.cmake  FindSFML.cmake
tek2/OOP/OOP_indie_studio_2018/include/: Config.hpp  Consts.hpp  Enums.hpp  Structures.hpp
tek2/OOP/OOP_indie_studio_2018/src/: IndieStudio.cpp  IndieStudio.hpp  Settings.cpp  Settings.hpp
tek2/OOP/OOP_indie_studio_2018/src/audio/: Audio.cpp  Audio.hpp
tek2/OOP/OOP_indie_studio_2018/src/game/: GameBack.cpp  GameBack.hpp  GameStatsContainer.cpp  GameStatsContainer.hpp  IntroAnimBack.cpp  IntroAnimBack.hpp  Map.cpp  Map.hpp  TcpClient.cpp  TcpClient.hpp  TcpServer.cpp  TcpServer.hpp
tek2/OOP/OOP_indie_studio_2018/src/game/display/: DisplayDecor.cpp  DisplayDecor.hpp  DisplayDecorAnim.cpp  DisplayDecorAnim.hpp  DisplayGame.cpp  DisplayGame.hpp  DisplayMap.cpp  DisplayMap.hpp  DisplayOverlay.cpp  DisplayOverlay.hpp  DisplayPlayer.cpp  DisplayPlayer.hpp  DisplayPlayerAnim.cpp  DisplayPlayerAnim.hpp
tek2/OOP/OOP_indie_studio_2018/src/game/player/: AiPlayer.cpp  AiPlayer.hpp  IPlayer.hpp  Player.cpp  Player.hpp
tek2/OOP/OOP_indie_studio_2018/src/irrlicht/: IrrlichtDevice.cpp  IrrlichtDevice.hpp  MyEventReceiver.cpp  MyEventReceiver.hpp  ResponsiveGui.cpp  ResponsiveGui.hpp
tek2/OOP/OOP_indie_studio_2018/src/mains/: MainBomberman.cpp  MainServer.cpp
tek2/OOP/OOP_indie_studio_2018/src/scene/: AScene.hpp  IScene.hpp  SceneFactory.hpp  SceneType.hpp
tek2/OOP/OOP_indie_studio_2018/src/scene/scenes/: SceneCreateGame.cpp  SceneCreateGame.hpp  SceneCredit.cpp  SceneCredit.hpp  SceneInGame.cpp  SceneInGame.hpp  SceneIntroduction.cpp  SceneIntroduction.hpp  SceneIntroductionAnim.cpp  SceneIntroductionAnim.hpp  SceneJoinGame.cpp  SceneJoinGame.hpp  SceneKeySettings.cpp  SceneKeySettings.hpp  SceneMainMenu.cpp  SceneMainMenu.hpp  SceneSettings.cpp  SceneSettings.hpp  SceneSplashScreen.cpp  SceneSplashScreen.hpp
tek2/OOP/OOP_indie_studio_2018/src/utils/: milli_sleep.cpp  milli_sleep.hpp  my_sockets.cpp  my_sockets.hpp
tek3/CPP/CPP_rtype_2019/: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
tek3/CPP/CPP_rtype_2019/src/: LibLoader.hpp  ProtocolTCP.hpp  ProtocolUDP.hpp
tek3/CPP/CPP_rtype_2019/src/Utils/: Vector2s.hpp
tek3/CPP/CPP_rtype_2019/src/client/: Config.hpp  main.cpp
tek3/CPP/CPP_rtype_2019/src/client/ClientGame/: AClientGame.hpp  IClientGame.hpp  MyClientGame.cpp  MyClientGame.hpp
tek3/CPP/CPP_rtype_2019/src/client/ClientLauncher/: AClientLauncher.hpp  IClientLauncher.hpp  MyClientLauncher.cpp  MyClientLauncher.hpp
tek3/CPP/CPP_rtype_2019/src/client/Graphic/: Graphic.cpp  Graphic.hpp
tek3/CPP/CPP_rtype_2019/src/client/SFML/Components/: AComponent.hpp  IComponent.hpp
tek3/CPP/CPP_rtype_2019/src/client/SFML/Scenes/: AScene.hpp  (+1 more)
tek3/CPP/CPP_rtype_2019/src/monsters/: FastMonster.cpp  FastMonster.hpp  FoeShots.cpp  FoeShots.hpp  SlowMonster.cpp  SlowMonster.hpp
tek3/CPP/CPP_rtype_2019/src/server/: BackEndGame.cpp  BackEndGame.hpp  BackEndLauncher.cpp  BackEndLauncher.hpp  GameRoom.cpp  GameRoom.hpp  User.cpp  User.hpp  main.cpp
tek3/CPP/CPP_rtype_2019/src/server/core/: Core.cpp  Core.hpp
tek3/CPP/CPP_rtype_2019/src/socket/: AServerTCP.hpp  AServerUDP.hpp  ASocket.hpp  IServer.hpp  ISocket.hpp  SocketError.hpp  Utils.cpp  Utils.hpp
tek3/CPP/CPP_rtype_2019/src/socket/socket_c/: Includes.hpp  ServerTCP.cpp  ServerTCP.hpp  ServerUDP.cpp  ServerUDP.hpp  SocketTCP.cpp  SocketTCP.hpp  SocketUDP.cpp  SocketUDP.hpp
tek3/CPP/CPP_zia_2019/: .gitignore  CMakeLists.txt  README.md  build.sh
tek3/CPP/CPP_zia_2019/resources/: config.json  config2.json
tek3/CPP/CPP_zia_2019/resources/ssl/: cert.pem  key.pem
tek3/CPP/CPP_zia_2019/resources/website/: get_query.php  header.php  index.php  post.php  post_return.php
tek3/CPP/CPP_zia_2019/resources/website/assets/: style.css
tek3/CPP/CPP_zia_2019/sources/api/: .gitignore  CMakeLists.txt  README.md
tek3/CPP/CPP_zia_2019/sources/api/sources/: Types.hpp
tek3/CPP/CPP_zia_2019/sources/core/: Core.cpp  Core.hpp  Errors.cpp  Errors.hpp  IError.cpp  IError.hpp  Main.cpp  ModulesManager.cpp  ModulesManager.hpp
tek3/CPP/CPP_zia_2019/sources/jsonparser/: JsonBuilder.cpp  JsonBuilder.hpp  JsonError.hpp  JsonModifier.cpp  JsonModifier.hpp  JsonParser.hpp  JsonPrinter.cpp  JsonPrinter.hpp  JsonVisitor.hpp  JsonWorker.cpp  JsonWorker.hpp  WistreamIterator.hpp
tek3/CPP/CPP_zia_2019/sources/libloader/: DllLoader.hpp  ILibLoader.hpp  LibLoader.hpp  ModuleLoader.cpp  ModuleLoader.hpp
tek3/CPP/CPP_zia_2019/sources/modules/ConsoleLogger/: ConsoleLogger.cpp  ConsoleLogger.hpp
tek3/CPP/CPP_zia_2019/sources/modules/FileServer/: FileServer.cpp  FileServer.hpp
tek3/CPP/CPP_zia_2019/sources/modules/HttpReceiver/: HttpReceiver.cpp  HttpReceiver.hpp
tek3/CPP/CPP_zia_2019/sources/modules/HttpSender/: HttpSender.cpp  HttpSender.hpp
tek3/CPP/CPP_zia_2019/sources/modules/NotSecureNetwork/: NotSecureNetwork.cpp  NotSecureNetwork.hpp
tek3/CPP/CPP_zia_2019/sources/modules/PhpCgi/: PhpCgi.cpp  PhpCgi.hpp
tek3/CPP/CPP_zia_2019/sources/modules/SecureNetwork/: SecureNetwork.cpp  SecureNetwork.hpp
tek3/CPP/CPP_zia_2019/sources/modules/Snek/: Snek.cpp  Snek.hpp
tek3/CPP/CPP_zia_2019/sources/socket/: Includes.hpp  MyRequest.hpp  MyResponse.hpp  SecureSocket.cpp  SecureSocket.hpp  SocketTCP.cpp  SocketTCP.hpp
tek3/CPP/CPP_zia_2019/sources/tools/: Atomic.hpp  IndexVaria.hpp  ModuleLoggable.hpp  Mutex.cpp  Mutex.hpp  SharedMutex.cpp  SharedMutex.hpp  Thread.hpp  Variant.hpp
(+1639 files in other folders)
